# flappy-mind

./: .gitignore  CMakeLists.txt  README.md
src/: Agent.h  Application.cpp  Application.h  Bird.cpp  Bird.h  Button.cpp  Button.h  GameManager.cpp  GameManager.h  GameState.cpp  GameState.h  HumanAgent.cpp  HumanAgent.h  Pipe.cpp  Pipe.h  QLearningAgent.cpp  QLearningAgent.h  main.cpp
